--- a/terraform_final_project/ansible/roles/consul/templates/consul-server.j2
+++ b/terraform_final_project/ansible/roles/consul/templates/consul-server.j2
@@ -1,4 +1,4 @@
-#!/usr/bin/env bash
+#!/bin/bash
 set -e
 
 ### set consul version
@@ -10,7 +10,7 @@ PRIVATE_IP=$(curl http://169.254.169.254/latest/meta-data/local-ipv4)
 echo "Installing dependencies..."
 apt-get -qq update &>/dev/null
 apt-get -yqq install unzip dnsmasq &>/dev/null
-
+# 
 echo "Configuring dnsmasq..."
 cat << EODMCF >/etc/dnsmasq.d/10-consul
 # Enable forward lookup of the 'consul' domain:
@@ -44,14 +44,21 @@ tee /etc/consul.d/config.json > /dev/null <<EOF
 {
   "advertise_addr": "$PRIVATE_IP",
   "data_dir": "/opt/consul",
-  "datacenter": "kandula",
+  "datacenter": "opsschool",
   "encrypt": "uDBV4e+LbFW3019YKPxIrg==",
   "disable_remote_exec": true,
   "disable_update_check": true,
   "leave_on_terminate": true,
   "retry_join": ["provider=aws tag_key=consul_server tag_value=true"],
+  {% if hostvars[inventory_hostname].tags.consul_server == 'true' %}
+  "server": true,
+  "bootstrap_expect": 1,
+  "ui": true,
+  "client_addr": "0.0.0.0"
+  {% else %}
   "enable_script_checks": true,
-  "server": false
+  "server": false,
+  {% endif %}
 }
 EOF
 
@@ -85,6 +92,5 @@ EOF
 systemctl daemon-reload
 systemctl enable consul.service
 systemctl start consul.service
-
 
 exit 0
