--- a/terraform_final_project/ansible/roles/consul/templates/consul-server.j2
+++ b/terraform_final_project/ansible/roles/consul/templates/consul-server.j2
@@ -1,6 +1,12 @@
 #!/bin/bash
 set -e
 
+if [ $(systemctl is-active consul) == "active" ]
+then
+        echo "consul is running"
+        exit 0
+fi
+
 ### set consul version
 CONSUL_VERSION="1.8.5"
 
