--- a/terraform_final_project/ansible/roles/consul/templates/config.json.j2
+++ b/terraform_final_project/ansible/roles/consul/templates/config.json.j2
@@ -7,9 +7,10 @@
   "disable_update_check": true,
   "leave_on_terminate": true,
   "retry_join": ["provider=aws tag_key=consul_server tag_value=true"],
+  "node_name": "{{ hostvars[inventory_hostname].tags.Name }}",
   {% if hostvars[inventory_hostname].tags.consul_server == 'true' %}
   "server": true,
-  "bootstrap_expect": 2,
+  "bootstrap_expect": 3,
   "ui": true,
   "client_addr": "0.0.0.0"
   {% else %}
