add node exporter service discovery

--- a/terraform_final_project/ansible/roles/consul/templates/config.json.j2
+++ b/terraform_final_project/ansible/roles/consul/templates/config.json.j2
@@ -1,5 +1,6 @@
 {
   "advertise_addr": "{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}",
+  "client_addr": "0.0.0.0",
   "data_dir": "/opt/consul",
   "datacenter": "opsschool",
   "encrypt": "uDBV4e+LbFW3019YKPxIrg==",
