--- a/terraform_final_project/ansible/roles/prometheus/templates/prometheus.yml.j2
+++ b/terraform_final_project/ansible/roles/prometheus/templates/prometheus.yml.j2
@@ -24,9 +24,24 @@ scrape_configs:
     static_configs:
     - targets: ['localhost:9090']
 
+  # - job_name: 'node_exporter'
+  #   scrape_interval: 15s
+  #   static_configs:
+  #     - targets: 
+  #       - '172.17.0.1:9100'
+
   - job_name: 'node_exporter'
-    scrape_interval: 15s
-    static_configs:
-      - targets: 
-        - '172.17.0.1:9100'
+    consul_sd_configs:
+    - server: {{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:8500
+      services:
+        - 'node_exporter'
+    relabel_configs:
+      - source_labels: ['__address__']
+        target_label: '__address__'
+        regex: '(.*):.*'
+        replacement: $1:9100
+      - source_labels: ['__meta_consul_node']
+        target_label: 'consul_node_name'
+      - source_labels: ['__meta_consul_dc']
+        target_label: 'consul_dc_name'     
 
