fix sg, elastic

--- a/terraform_final_project/ansible/roles/prometheus/templates/prometheus.yml.j2
+++ b/terraform_final_project/ansible/roles/prometheus/templates/prometheus.yml.j2
@@ -59,3 +59,18 @@ scrape_configs:
         target_label: 'consul_node_name'
       - source_labels: ['__meta_consul_dc']
         target_label: 'consul_dc_name'
+
+  - job_name: 'kandula'
+    consul_sd_configs:
+    - server: {{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:8500
+      services:
+        - 'backend-service-default'
+    relabel_configs:
+      - source_labels: ['__address__']
+        target_label: '__address__'
+        regex: '(.*):.*'
+        replacement: $1:9100
+      - source_labels: ['__meta_consul_node']
+        target_label: 'consul_node_name'
+      - source_labels: ['__meta_consul_dc']
+        target_label: 'consul_dc_name'
